# resly-helper-demo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RESLY_CLI_DEMO_PLAN.md
.agents/plugins/: marketplace.json
claude/resly-mcp/: README.md  claude_desktop_config.example.json  manifest.json  package-lock.json  package.json  resly-open-api.mcpb
claude/resly-mcp/scripts/: smoke.mjs
claude/resly-mcp/server/: index.js
docs/: API_INVENTORY.md  COMMAND_CONTRACT.md  HUMAN_USAGE.md  POSTMAN_TESTING.md  SAFETY_REVIEW_AND_STRATEGY.md  SELL_BACK_BRIEF.md
docs/source-snapshots/: resly-llms.txt
examples/: rate-update.json
fixtures/: demo.json
plugins/resly-open-api/.codex-plugin/: plugin.json
plugins/resly-open-api/scripts/: check-resly-cli.sh
plugins/resly-open-api/skills/resly-open-api/: SKILL.md
site/: capabilities.html  demo.html  index.html  integrations.html  safety.html  use-cases.html
site/assets/: asset-capture.html  hotel-manager-board-capture.html  site.js  styles.css
src/: main.rs
tests/postman/: resly-helper.postman_collection.json  run-newman.mjs  server.mjs
