[package]
name = "resly"
version = "0.1.0"
edition = "2024"
description = "Demo CLI for Resly Open API workflows"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
urlencoding = "2"
